---
source: rasn-compiler-tests/tests/parse_test.rs
assertion_line: 33
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x402_1999_MHSDirectoryObjectsAndAttributes.asn1
---
Warnings:
Unidentified error while generating bindings: Unexpectedly encountered unlinked struct-like ASN1 value!
LinkerError in ASN grammar: Failed to link value with 'ORName'


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod mhsdirectory_objects_and_attributes {
    extern crate alloc;
    use super::authentication_framework::AlgorithmIdentifier;
    use super::certificate_extensions::*;
    use super::information_framework::*;
    use super::mhsobject_identifiers::{
        ID_AT_MHS_ACCEPTABLE_EITS, ID_AT_MHS_DELIVERABLE_CLASSES,
        ID_AT_MHS_DELIVERABLE_CONTENT_TYPES, ID_AT_MHS_DL_ARCHIVE_SERVICE, ID_AT_MHS_DL_MEMBERS,
        ID_AT_MHS_DL_POLICY, ID_AT_MHS_DL_RELATED_LISTS, ID_AT_MHS_DL_SUBMIT_PERMISSIONS,
        ID_AT_MHS_DL_SUBSCRIPTION_SERVICE, ID_AT_MHS_EXCLUSIVELY_ACCEPTABLE_EITS,
        ID_AT_MHS_MAXIMUM_CONTENT_LENGTH, ID_AT_MHS_MESSAGE_STORE_DN, ID_AT_MHS_OR_ADDRESSES,
        ID_AT_MHS_OR_ADDRESSES_WITH_CAPABILITIES, ID_AT_MHS_SUPPORTED_ATTRIBUTES,
        ID_AT_MHS_SUPPORTED_AUTOMATIC_ACTIONS, ID_AT_MHS_SUPPORTED_CONTENT_TYPES,
        ID_AT_MHS_SUPPORTED_MATCHING_RULES, ID_AT_MHS_UNACCEPTABLE_EITS,
        ID_CON_DL_ADMINISTRATOR_ANNOTATION, ID_CON_DL_NESTED_DL, ID_CON_DL_RESET_ORIGINATOR,
        ID_MR_ADDRESS_CAPABILITIES_MATCH, ID_MR_CAPABILITY_MATCH, ID_MR_ORNAME_EXACT_MATCH,
        ID_OC_MHS_DISTRIBUTION_LIST, ID_OC_MHS_MESSAGE_STORE, ID_OC_MHS_MESSAGE_TRANSFER_AGENT,
        ID_OC_MHS_USER, ID_OC_MHS_USER_AGENT, ID_SAN_MTA_NAME,
    };
    use super::msabstract_service::*;
    use super::msgeneral_attribute_types::{AttributeTable, X413ATTRIBUTE};
    use super::msgeneral_auto_action_types::AutoActionTable;
    use super::msmatching_rules::{
        MatchingRuleTable, O_RADDRESS_ELEMENTS_MATCH, O_RADDRESS_MATCH,
        O_RADDRESS_SUBSTRING_ELEMENTS_MATCH, O_RNAME_ELEMENTS_MATCH, O_RNAME_MATCH,
        O_RNAME_SINGLE_ELEMENT_MATCH, O_RNAME_SUBSTRING_ELEMENTS_MATCH,
    };
    use super::mtsabstract_service::{
        ContentLength, EncodedInformationTypesConstraints, ExtendedContentType,
        ExtendedEncodedInformationType, GlobalDomainIdentifier, MTAName, ORAddress, ORName,
        RequestedDeliveryMethod, SecurityContext,
    };
    use super::selected_attribute_types::{
        COMMON_NAME, DESCRIPTION, DISTINGUISHED_NAME, INTEGER_MATCH, ORGANIZATIONAL_UNIT_NAME,
        ORGANIZATION_NAME, OWNER, PROTOCOL_INFORMATION, SEE_ALSO,
    };
    use super::selected_object_classes::APPLICATION_ENTITY;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " OR-Address with Capabilities"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct AddressCapabilities {
        pub description: Option<GeneralString>,
        pub address: ORAddress,
        pub capabilities: SetOf<Capability>,
    }
    impl AddressCapabilities {
        pub fn new(
            description: Option<GeneralString>,
            address: ORAddress,
            capabilities: SetOf<Capability>,
        ) -> Self {
            Self {
                description,
                address,
                capabilities,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct AlgorithmInformation {
        #[rasn(tag(context, 0), identifier = "algorithm-identifier")]
        pub algorithm_identifier: AlgorithmIdentifier,
        #[rasn(tag(context, 1), identifier = "originator-certificate-selector")]
        pub originator_certificate_selector: Option<CertificateAssertion>,
        #[rasn(tag(context, 2), identifier = "recipient-certificate-selector")]
        pub recipient_certificate_selector: Option<CertificateAssertion>,
    }
    impl AlgorithmInformation {
        pub fn new(
            algorithm_identifier: AlgorithmIdentifier,
            originator_certificate_selector: Option<CertificateAssertion>,
            recipient_certificate_selector: Option<CertificateAssertion>,
        ) -> Self {
            Self {
                algorithm_identifier,
                originator_certificate_selector,
                recipient_certificate_selector,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set)]
    #[non_exhaustive]
    pub struct Capability {
        #[rasn(tag(context, 0), identifier = "content-types")]
        pub content_types: Option<SetOf<ExtendedContentType>>,
        #[rasn(tag(context, 1), identifier = "maximum-content-length")]
        pub maximum_content_length: Option<ContentLength>,
        #[rasn(tag(context, 2), identifier = "encoded-information-types-constraints")]
        pub encoded_information_types_constraints: Option<EncodedInformationTypesConstraints>,
        #[rasn(tag(context, 3), identifier = "security-labels")]
        pub security_labels: Option<SecurityContext>,
    }
    impl Capability {
        pub fn new(
            content_types: Option<SetOf<ExtendedContentType>>,
            maximum_content_length: Option<ContentLength>,
            encoded_information_types_constraints: Option<EncodedInformationTypesConstraints>,
            security_labels: Option<SecurityContext>,
        ) -> Self {
            Self {
                content_types,
                maximum_content_length,
                encoded_information_types_constraints,
                security_labels,
            }
        }
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum DLPolicyReturnOfContent {
        unchanged = 0,
        #[rasn(identifier = "content-return-not-requested")]
        content_return_not_requested = 1,
        #[rasn(identifier = "content-return-requested")]
        content_return_requested = 2,
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum DLPolicyDisclosureOfOtherRecipients {
        unchanged = 0,
        #[rasn(identifier = "disclosure-of-other-recipients-prohibited")]
        disclosure_of_other_recipients_prohibited = 1,
        #[rasn(identifier = "disclosure-of-other-recipients-allowed")]
        disclosure_of_other_recipients_allowed = 2,
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum DLPolicyImplicitConversionProhibited {
        unchanged = 0,
        #[rasn(identifier = "implicit-conversion-allowed")]
        implicit_conversion_allowed = 1,
        #[rasn(identifier = "implicit-conversion-prohibited")]
        implicit_conversion_prohibited = 2,
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum DLPolicyConversionWithLossProhibited {
        unchanged = 0,
        #[rasn(identifier = "conversion-with-loss-allowed")]
        conversion_with_loss_allowed = 1,
        #[rasn(identifier = "conversion-with-loss-prohibited")]
        conversion_with_loss_prohibited = 2,
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum DLPolicyRequestedDeliveryMethod {
        #[rasn(tag(context, 0))]
        unchanged(()),
        #[rasn(tag(context, 1))]
        removed(()),
        replaced(RequestedDeliveryMethod),
    }
    #[doc = " DL Policy"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set)]
    #[non_exhaustive]
    pub struct DLPolicy {
        #[rasn(
            tag(context, 0),
            default = "dlpolicy_report_propagation_default",
            identifier = "report-propagation"
        )]
        pub report_propagation: Integer,
        #[rasn(
            tag(context, 1),
            default = "dlpolicy_report_from_dl_default",
            identifier = "report-from-dl"
        )]
        pub report_from_dl: Integer,
        #[rasn(
            tag(context, 2),
            default = "dlpolicy_originating_mta_report_default",
            identifier = "originating-MTA-report"
        )]
        pub originating_mta_report: Integer,
        #[rasn(
            tag(context, 3),
            default = "dlpolicy_originator_report_default",
            identifier = "originator-report"
        )]
        pub originator_report: Integer,
        #[rasn(
            tag(context, 4),
            default = "dlpolicy_return_of_content_default",
            identifier = "return-of-content"
        )]
        pub return_of_content: DLPolicyReturnOfContent,
        #[rasn(tag(context, 5), default = "dlpolicy_priority_default")]
        pub priority: Integer,
        #[rasn(
            tag(context, 6),
            default = "dlpolicy_disclosure_of_other_recipients_default",
            identifier = "disclosure-of-other-recipients"
        )]
        pub disclosure_of_other_recipients: DLPolicyDisclosureOfOtherRecipients,
        #[rasn(
            tag(context, 7),
            default = "dlpolicy_implicit_conversion_prohibited_default",
            identifier = "implicit-conversion-prohibited"
        )]
        pub implicit_conversion_prohibited: DLPolicyImplicitConversionProhibited,
        #[rasn(
            tag(context, 8),
            default = "dlpolicy_conversion_with_loss_prohibited_default",
            identifier = "conversion-with-loss-prohibited"
        )]
        pub conversion_with_loss_prohibited: DLPolicyConversionWithLossProhibited,
        #[rasn(
            tag(context, 9),
            default = "dlpolicy_further_dl_expansion_allowed_default",
            identifier = "further-dl-expansion-allowed"
        )]
        pub further_dl_expansion_allowed: bool,
        #[rasn(
            tag(context, 10),
            default = "dlpolicy_originator_requested_alternate_recipient_removed_default",
            identifier = "originator-requested-alternate-recipient-removed"
        )]
        pub originator_requested_alternate_recipient_removed: bool,
        #[rasn(
            tag(context, 11),
            default = "dlpolicy_proof_of_delivery_default",
            identifier = "proof-of-delivery"
        )]
        pub proof_of_delivery: Integer,
        #[rasn(
            tag(context, 12),
            default = "dlpolicy_requested_delivery_method_default",
            identifier = "requested-delivery-method"
        )]
        pub requested_delivery_method: DLPolicyRequestedDeliveryMethod,
        #[rasn(tag(context, 13), identifier = "token-encryption-algorithm-preference")]
        pub token_encryption_algorithm_preference: Option<SequenceOf<AlgorithmInformation>>,
        #[rasn(tag(context, 14), identifier = "token-signature-algorithm-preference")]
        pub token_signature_algorithm_preference: Option<SequenceOf<AlgorithmInformation>>,
    }
    impl DLPolicy {
        pub fn new(
            report_propagation: Integer,
            report_from_dl: Integer,
            originating_mta_report: Integer,
            originator_report: Integer,
            return_of_content: DLPolicyReturnOfContent,
            priority: Integer,
            disclosure_of_other_recipients: DLPolicyDisclosureOfOtherRecipients,
            implicit_conversion_prohibited: DLPolicyImplicitConversionProhibited,
            conversion_with_loss_prohibited: DLPolicyConversionWithLossProhibited,
            further_dl_expansion_allowed: bool,
            originator_requested_alternate_recipient_removed: bool,
            proof_of_delivery: Integer,
            requested_delivery_method: DLPolicyRequestedDeliveryMethod,
            token_encryption_algorithm_preference: Option<SequenceOf<AlgorithmInformation>>,
            token_signature_algorithm_preference: Option<SequenceOf<AlgorithmInformation>>,
        ) -> Self {
            Self {
                report_propagation,
                report_from_dl,
                originating_mta_report,
                originator_report,
                return_of_content,
                priority,
                disclosure_of_other_recipients,
                implicit_conversion_prohibited,
                conversion_with_loss_prohibited,
                further_dl_expansion_allowed,
                originator_requested_alternate_recipient_removed,
                proof_of_delivery,
                requested_delivery_method,
                token_encryption_algorithm_preference,
                token_signature_algorithm_preference,
            }
        }
    }
    fn dlpolicy_report_propagation_default() -> Integer {
        Integer::from(0i128)
    }
    fn dlpolicy_report_from_dl_default() -> Integer {
        Integer::from(0i128)
    }
    fn dlpolicy_originating_mta_report_default() -> Integer {
        Integer::from(0i128)
    }
    fn dlpolicy_originator_report_default() -> Integer {
        Integer::from(0i128)
    }
    fn dlpolicy_return_of_content_default() -> DLPolicyReturnOfContent {
        UNCHANGED
    }
    fn dlpolicy_priority_default() -> Integer {
        Integer::from(0i128)
    }
    fn dlpolicy_disclosure_of_other_recipients_default() -> DLPolicyDisclosureOfOtherRecipients {
        UNCHANGED
    }
    fn dlpolicy_implicit_conversion_prohibited_default() -> DLPolicyImplicitConversionProhibited {
        UNCHANGED
    }
    fn dlpolicy_conversion_with_loss_prohibited_default() -> DLPolicyConversionWithLossProhibited {
        UNCHANGED
    }
    fn dlpolicy_further_dl_expansion_allowed_default() -> bool {
        true
    }
    fn dlpolicy_originator_requested_alternate_recipient_removed_default() -> bool {
        true
    }
    fn dlpolicy_proof_of_delivery_default() -> Integer {
        Integer::from(1i128)
    }
    fn dlpolicy_requested_delivery_method_default() -> DLPolicyRequestedDeliveryMethod {
        CHOICE::unchanged(())
    }
    #[doc = " ATTRIBUTE SYNTAXES"]
    #[doc = " DL Submit Permission"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum DLSubmitPermission {
        #[rasn(tag(context, 0))]
        individual(ORName),
        #[rasn(tag(context, 1), identifier = "member-of-dl")]
        member_of_dl(ORName),
        #[rasn(tag(context, 2), identifier = "pattern-match")]
        pattern_match(ORNamePattern),
        #[rasn(tag(context, 3), identifier = "member-of-group")]
        member_of_group(Name),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ORNamePattern(pub ORName);
}
